<resources>
    <string name="app_name">SpotifyStalker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome ! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="nombre_usuario">Name</string>
    <string name="playlists">Playlists</string>
    <string name="remember_password">Remember Password</string>
</resources>