<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#008b8c"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="0"
            android:background="#19D65E"
            android:clickable="true"
            android:onClick="updateFriendList"
            app:srcCompat="@android:drawable/stat_notify_sync"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:onClick="openMainProfile"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"

                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/main_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="#fff"
                android:textSize="13sp" />

        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/main_profilepic"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="0"
            app:srcCompat="@drawable/resource_default"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:onClick="openMainProfile"
        android:orientation="horizontal"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/following_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="7"
                android:textColor="#009293"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/following_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/following"
                android:textColor="?android:attr/textColorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followers_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="26"
                android:textColor="#009293"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/followers_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/followers"
                android:textColor="?android:attr/textColorPrimary" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlists_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="7"
                android:textColor="#009293"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playlists_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playlists"
                android:textColor="?android:attr/textColorPrimary" />
        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:divider="@drawable/divider"
        android:dividerHeight="1dp"></ListView>

</LinearLayout>
